2004-02-11  Patrice Dumas  <dumas@centre-cired.fr> 

	* texi2html.pl: use the manual name (file basename) as default output
	directory when split.
	* NEWS, Tests/test.sh: update.

2004-02-11  Derek Price  <derek@ximbiot.com>

	* Tests/GermanNodeTest/.cvsignore, Tests/index_table/.cvsignore,
	Tests/macros/.cvsignore, Tests/sectionning/.cvsignore,
	Tests/ccvs/.cvsignore, Tests/nodes_texinfo/.cvsignore,
	Tests/texi2html/.cvsignore, Tests/texinfo/.cvsignore,
	Tests/viper/.cvsignore, Tests/viper_monolithic/.cvsignore,
	Tests/xemacs/.cvsignore, Tests/xemacs_frame/.cvsignore,
	Tests/formatting/.cvsignore: New files to suppress warnings about files
	created by the test scripts.

2004-02-11  Derek Price  <derek@ximbiot.com>

	* Makefile.am (bin_PROGRAMS): Move...
	(bin_SCRIPTS): ...here.
	(texi2html_SOURCES): Remove unused variable.

2004-02-10  Patrice Dumas  <dumas@centre-cired.fr> 

	* texi2html.pl: put the code related with cross references in the 
	main namespace.
	* Makefile.am: remove T2h_unicode.pm, T2h_nounicode.pm.

2004-02-10  Patrice Dumas  <dumas@centre-cired.fr> 

	* texi2html.pl: put cross manual reference and unicode related
	functions in the main program (instead of T2h_unicode.pm,
	T2h_nounicode.pm).
	Don't add no-... options when there are allready the options added.
	* T2h_unicode.pm, T2h_nounicode.pm: remove.

2004-02-07  Patrice Dumas  <dumas@centre-cired.fr> 

	* T2h_unicode.pm, T2h_nounicode.pm: make global variables lexical
	variables.
	* texi2html.init: output header if there is only one section.
	* Tests/: more tests for the new cross references scheme.
	* doc/: use a newer texinfo.tex. Be texi2dvi friendly.
	* Tests/Makefile.am: comment out check-local, it isn't ready.

2004-02-06  Derek Price  <derek@ximbiot.com>

	* T2h_unicode.pm, T2h_nounicode.pm: Declare some otherwise undeclared
	variables as global variables.

2004-02-06  Derek Price  <derek@ximbiot.com>

	* doc/Makefile.am (txt): New targets to convert .texinfo files into
	text.